--- a/_config.yml
+++ b/_config.yml
@@ -70,14 +70,14 @@ post-preview-words: 96
 
 paginate: 5
 
-fb-share: True
+fb-share: False
 twitter-share: True
 reddit-share: True
 google-plus-share: True
 linkedin-share: True
-pinterest-share: True
+pinterest-share: False
 vkontakte-share: True
-disqus-shortname: "panossakkos"
+disqus-shortname: "mattecologist"
 
 ###############
 # Life Events #
@@ -105,14 +105,10 @@ email: "your@email.here"
 ##################
 
 social:
-  - title: "facebook"
-    url: "https://facebook.com/"
   - title: "twitter"
-    url: "https://twitter.com/"
+    url: "https://twitter.com/InsectEcology"
   - title: "github"
     url: "https://github.com/PanosSakkos/personal-jekyll-theme"
-  - title: "bitcoin"
-    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
   - title: "rss"
     url: "/feed.xml"
 
