added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ keywords: "none"
 
 black-favicon: "/img/black-lab-glass.ico"
 background-img: "../img/intro-bg.jpg"
-me-img: "/img/jetpacktocat.png"
+me-img: "/img/mattfynbos.jpg"
 
 ##############################
 # Dynamic Text on the header #
