--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ force-https: True
 pages_list:
   About: 'about'
   Blog: 'latest-post'
+  Publications: 'publications'
   Timeline: 'timeline'
   Contact: 'contact'
 
