--- a/_config.yml
+++ b/_config.yml
@@ -83,12 +83,15 @@ disqus-shortname: "mattecologist"
 ###############
 
 events:
-  - image: "/img/career/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
-  - image: "/img/career/baracktocat.jpg"
-    date: "September 2007 - August 2013"
-    description: "Started coding"
+  - image: "/img/career/stellenbosch.png"
+    date: "Feb 2013 - Today"
+    description: "Postdoctoral Fellow"
+  - image: "/img/career/melbourne.jpg"
+    date: "Jan 2009 - Jan 2013"
+    description: "PhD"
+  - image: "/img/career/adelaide.png"
+    date: "Jan 2003 - June 2008"
+    description: "BSc (Honours)"
 
 # First image of the Career timeline
 career-img: "/img/career/default.png"
