--- a/_config.yml
+++ b/_config.yml
@@ -84,14 +84,20 @@ disqus-shortname: "mattecologist"
 
 events:
   - image: "/img/career/dorsalis.jpg"
-    date: "Feb 2013 - Today"
-    description: "Postdoctoral Fellow"
+    date: "Feb 2014 - Today"
+    description: "Postdoctoral Fellow, Centre for Invasion Biology, Stellenbosch Univeristy"
+  - image: "/img/career/nema.png"
+    date: "Feb 2013 - Jan 2014"
+    description: "Postdoctoral Fellow, Dept. Conservation Ecology & Entomology, Stellenbosch Univeristy"
   - image: "/img/career/rlem.jpg"
     date: "Jan 2009 - Jan 2013"
-    description: "PhD - <em> A predictive framework... climate change </em>"
+    description: "PhD - <em> A predictive framework to assess response of invasive invertebrates to climate change: pest mite species of Australian grains.</em> The University of Melbourne"
   - image: "/img/career/evania.jpg"
-    date: "Jan 2003 - June 2008"
-    description: "BSc (Honours) Systematics of evaniid wasps"
+    date: "Jul 2007 - Jun 2008"
+    description: "BSc (Hons) <em> Systematics of the Australian evaniids (Hymenoptera: Evaniidae) based on 28S rRNA and cytochrome oxidase I genes.</em> The University of Adelaide"
+  - image: "/img/career/mouse.jpg"
+    date: "Jan 2003 - Jun 2007"
+    description: "BSc - majors in Ecology and Zoology"
 
 # First image of the Career timeline
 career-img: "/img/career/matt.png"
