--- a/_config.yml
+++ b/_config.yml
@@ -87,16 +87,16 @@ disqus-shortname: "mattecologist"
 events:
   - image: "/img/career/dorsalis.jpg"
     date: "Feb 2014 - Today"
-    description: "Postdoctoral Fellow, Centre for Invasion Biology, Stellenbosch University <small> Bactrocera dorsalis by IAEA (International Atomic Energy Agency) Licensed under CC BY 2.0 </small>"
+    description: "Postdoctoral Fellow, Centre for Invasion Biology, Stellenbosch University <sub><sup> photo: Bactrocera dorsalis by IAEA (International Atomic Energy Agency) Licensed under CC BY 2.0 </sup></sub>"
   - image: "/img/career/nema.png"
     date: "Feb 2013 - Jan 2014"
     description: "Postdoctoral Fellow, Dept. Conservation Ecology & Entomology, Stellenbosch University"
   - image: "/img/career/rlem.jpg"
     date: "Jan 2009 - Jan 2013"
-    description: "PhD - <em> A predictive framework to assess response of invasive invertebrates to climate change: pest mite species of Australian grains.</em> The University of Melbourne" #<size=2> Halotydeus destructor IPM Technologies </size>"
+    description: "PhD - <em> A predictive framework to assess response of invasive invertebrates to climate change: pest mite species of Australian grains.</em> The University of Melbourne <sub><sup> photo: Halotydeus destructor IPM Technologies </sup></sub>"
   - image: "/img/career/evania.jpg"
     date: "Jul 2007 - Jun 2008"
-    description: "BSc (Hons) <em> Systematics of the Australian evaniids (Hymenoptera: Evaniidae) based on 28S rRNA and cytochrome oxidase I genes.</em> The University of Adelaide" # <size=2>photo: Evania appendigaster 3 by David Crummey Licensed under CC BY 2.0 </size>"
+    description: "BSc (Hons) <em> Systematics of the Australian evaniids (Hymenoptera: Evaniidae) based on 28S rRNA and cytochrome oxidase I genes.</em> The University of Adelaide <sub><sup> photo: Evania appendigaster 3 by David Crummey Licensed under CC BY 2.0 </sup></sub>"
   - image: "/img/career/mouse.jpg"
     date: "Jan 2003 - Jun 2007"
     description: "BSc - Majors in Ecology and Zoology. The University of Adelaide"
