added nematode picture

--- a/_config.yml
+++ b/_config.yml
@@ -86,17 +86,17 @@ disqus-shortname: "mattecologist"
 
 events:
   - image: "/img/career/dorsalis.jpg"
-    date: "Feb 2014 - Today"
-    description: "Postdoctoral Fellow, Centre for Invasion Biology, Stellenbosch University <sub><sup> photo: Bactrocera dorsalis by IAEA (International Atomic Energy Agency) Licensed under CC BY 2.0 </sup></sub>"
+    date: "Feb 2014 - Jan 2016"
+    description: "Postdoctoral Fellow, Centre for Invasion Biology, Stellenbosch University "
   - image: "/img/career/nema.png"
     date: "Feb 2013 - Jan 2014"
     description: "Postdoctoral Fellow, Dept. Conservation Ecology & Entomology, Stellenbosch University"
   - image: "/img/career/rlem.jpg"
     date: "Jan 2009 - Jan 2013"
-    description: "PhD - <em> A predictive framework to assess response of invasive invertebrates to climate change: pest mite species of Australian grains.</em> The University of Melbourne <sub><sup> photo: Halotydeus destructor IPM Technologies </sup></sub>"
+    description: "PhD - <em> A predictive framework to assess response of invasive invertebrates to climate change: pest mite species of Australian grains.</em> The University of Melbourne"
   - image: "/img/career/evania.jpg"
     date: "Jul 2007 - Jun 2008"
-    description: "BSc (Hons) <em> Systematics of the Australian evaniids (Hymenoptera: Evaniidae) based on 28S rRNA and cytochrome oxidase I genes.</em> The University of Adelaide <sub><sup> photo: Evania appendigaster 3 by David Crummey Licensed under CC BY 2.0 </sup></sub>"
+    description: "BSc (Hons) <em> Systematics of the Australian evaniids (Hymenoptera: Evaniidae) based on 28S rRNA and cytochrome oxidase I genes.</em> The University of Adelaide"
   - image: "/img/career/mouse.jpg"
     date: "Jan 2003 - Jun 2007"
     description: "BSc - Majors in Ecology and Zoology. The University of Adelaide"
