updated publications and about sections

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ pages_list:
 
 author: "Matt Hill"
 lang: "en"
-title: "{ Matt Hill }"
+title: "Matt Hill"
 favicon: "/img/favicon.ico"
 description: "insects, ecology, R"
 keywords: "none"
