--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,11 @@ lines:			# You can add HTML Tags in the Text
 ###############
 
 events:
+ - image: "/img/career/matt.png"
+    date: "August 2017 - "
+    description: "Research Scientist, Data61, CSIRO, Canberra"
   - image: "/img/career/aphid.png"
-    date: "Feb 2016 - "
+    date: "Feb 2016 - August 2017"
     description: "Postdoctoral Fellow, CSIRO Agriculture, Canberra"
   - image: "/img/career/dorsalis.jpg"
     date: "Feb 2014 - Jan 2016"
